--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Class 11 Demo</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BUS MALL</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
-  <section class="container">
-    <header>
-      <img src="https://placehold.it/100x100/ddd" alt="" class="logo">
-      <nav>
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Contact</a>
-      </nav>
-    </header>
+    <section class="container">
+      <header>
+        <img src="https://placehold.it/100x100/ddd" alt="" class="logo" />
+        <nav>
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Contact</a>
+        </nav>
+      </header>
 
-    <main>
-      <section class="image-section" id="imageSection">
-        <img src="" alt="" id="leftImage">
-        <img src="" alt="" id="centertImage">
-        <img src="" alt="" id="rightImage">
-      </section>
-    </main>
-    
-    <footer>
-    </footer>
-  </section>
+      <main>
+        <p>Choose your favorite Product by click on it:</p>
+        <section class="image-section" id="imageSection">
+          <img src="" alt="" id="leftImage" />
+          <img src="" alt="" id="centertImage" />
+          <img src="" alt="" id="rightImage" />
+        </section>
+      <button id="button">View Results</button>
+      <div id="list"></div>
+        </main>
 
-  <script src="js/app.js"></script>
-</body>
+      <footer></footer>
+    </section>
+
+    <script src="app.js"></script>
+  </body>
 </html>
