--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BUS MALL</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
     <section class="container">
       <header>
-        <img src="https://placehold.it/100x100/ddd" alt="" class="logo" />
+        <img
+          id="logo"
+          src="https://placehold.it/100x100/ddd"
+          alt=""
+          class="logo"
+        />
         <nav>
           <a href="">Home</a>
           <a href="">About</a>
@@ -26,13 +30,16 @@
           <img src="" alt="" id="centertImage" />
           <img src="" alt="" id="rightImage" />
         </section>
-      <button id="button">View Results</button>
-      <div id="list"></div>
-        </main>
+        <button id="button">View Results</button>
+        <div id="list"></div>
+
+        <canvas id="myChart"></canvas>
+      </main>
 
       <footer></footer>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
